# User_reg

./: README.md  pyproject.toml
.github/workflows/: ci.yml
user_reg_form/: hooks.py  modules.txt
user_reg_form/fixtures/: reg_form.json
user_reg_form/user_reg_form/doctype/reg_form/: reg_form.js  reg_form.json  reg_form.py  test_reg_form.py
